--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -13,7 +13,54 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="Nedrysoft::Ribbon::RibbonWidget" name="fileRibbonGroup">
+      <widget class="QWidget" name="File">
+       <attribute name="title">
+        <string>File</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="icons">
+       <attribute name="title">
+        <string>Icons</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="build">
+       <attribute name="title">
+        <string>Build</string>
+       </attribute>
+      </widget>
+     </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -44,6 +91,14 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Nedrysoft::Ribbon::RibbonWidget</class>
+   <extends>QTabWidget</extends>
+   <header>Ribbon/RibbonWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
