--- a/src/app.qrc
+++ b/src/app.qrc
@@ -22,5 +22,6 @@
         <file>../assets/noun_Arrow_3439356-inverted.png</file>
 
         <file>../assets/app_icon.png</file>
+        <file>../assets/arrow_drop.png</file>
     </qresource>
 </RCC>
