--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -343,7 +343,7 @@
             <number>-1</number>
            </property>
            <item row="0" column="0">
-            <layout class="QVBoxLayout" name="FileAddLayout" stretch="0">
+            <layout class="QVBoxLayout" name="FileAddLayout" stretch="0,0">
              <property name="spacing">
               <number>6</number>
              </property>
@@ -351,7 +351,7 @@
               <enum>QLayout::SetDefaultConstraint</enum>
              </property>
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="insertAppPushButton">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                  <horstretch>0</horstretch>
@@ -388,6 +388,35 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QPushButton" name="dropAppPushButton">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>10</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>10</height>
+                </size>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="app.qrc">
+                 <normaloff>:/assets/arrow_drop.png</normaloff>:/assets/arrow_drop.png</iconset>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
            <item row="0" column="1">
@@ -402,6 +431,19 @@
               <size>
                <width>40</width>
                <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="0">
+            <spacer name="verticalSpacer_4">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
               </size>
              </property>
             </spacer>
@@ -478,7 +520,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_4">
              <item>
-              <widget class="QCheckBox" name="checkBox">
+              <widget class="QCheckBox" name="showIconsCheckBox">
                <property name="font">
                 <font>
                  <family>Open Sans</family>
